--- a/flyric_rendergl.cbp
+++ b/flyric_rendergl.cbp
@@ -8,7 +8,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="main_linux_debug.out">
-				<Option output="$(TARGET_NAME)" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/$(TARGET_NAME)" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -40,7 +40,7 @@
 				</MakeCommands>
 			</Target>
 			<Target title="main_linux.out">
-				<Option output="$(TARGET_NAME)" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/$(TARGET_NAME)" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -76,13 +76,13 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="Makefile" />
-		<Unit filename="flyric_rendergl.c">
+		<Unit filename="lrc.txt" />
+		<Unit filename="src/flyric_rendergl.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="flyric_rendergl.h" />
-		<Unit filename="glenv.h" />
-		<Unit filename="lrc.txt" />
-		<Unit filename="main_linux.c">
+		<Unit filename="src/flyric_rendergl.h" />
+		<Unit filename="src/glenv.h" />
+		<Unit filename="src/main_linux.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
